--- a/src/global.css
+++ b/src/global.css
@@ -1,7 +1,3 @@
-/* Colors from https://colorhunt.co/palette/22272 */
-
-
-
 html {
     box-sizing: border-box;
 }
@@ -11,19 +7,6 @@ html {
 
 body {
     font-family: 'Nunito Sans', sans-serif;
-    color: #f9f7f7;
+    font-weight: 100;
     margin: 0;
-}
-
-body::after {
-    content: '';
-    background-image: url("images/topography.svg"), linear-gradient(120deg, #3f72af, #112d4e);
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    z-index: -1;
-    background-size: 200px, auto;
-    background-attachment: fixed;
 }
